[tool.poetry]
name = "typingstats-halloween-2023"
version = "0.1.0"
description = ""
authors = ["Charlie Phil <71610407+charlesphil@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pandas = "^2.1.1"
requests = "^2.31.0"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
